Fix spacing on header

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -38,6 +38,7 @@ $header-padding : 13px;
 
             em {
                 font-weight: bold;
+                margin-left: 5px;
             }
         }
         padding-right : 15px;
